--- a/Food_Menu/nbproject/private/private.properties
+++ b/Food_Menu/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\wj01254\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\lb05141\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
